增加了建议的 vs code 插件

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,10 @@
 {
   "recommendations": [
     "misterj.vue-volar-extention-pack",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "formulahendry.auto-close-tag",
+    "ms-vscode.vscode-typescript-tslint-plugin",
+    "steoates.autoimport",
+    "christian-kohler.path-intellisense"
   ]
 }
