--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
+    "naive-ui": "^2.24.7",
     "typescript": "^4.4.4",
+    "vfonts": "^0.0.3",
     "vite": "^2.7.2",
     "vue-tsc": "^0.29.8"
   }
