--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "mockjs": "^1.1.0",
     "vue": "^3.2.25",
     "vue-router": "4"
