--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.12.0",
     "axios": "^0.26.1",
     "mockjs": "^1.1.0",
     "vue": "^3.2.25",
